[package]
name = "master_page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
material-yew = { version = "0.2.0", features = ["full"] }
css-in-rust = "0.5.0"
gloo-utils = "0.1.5"
